--- a/public/app/views/topics/index.html
+++ b/public/app/views/topics/index.html
@@ -2,39 +2,28 @@
   <h1>Aihealueet</h1>
 </div>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">
-      <a href="#/topics/1">Kissojen hoito</a>
-    </h3>
-  </div>
-  <div class="panel-body">
-    Tämä aihealue käsittelee kissojen hoitoa
-  </div>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">
-      <a href="#/topics/1">Express vinkit</a>
-    </h3>
-  </div>
-  <div class="panel-body">
-    Tämä aihealue käsittelee Express-sovelluskehystä
-  </div>
+<div ng-repeat="topic in topics" class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">
+            <a href="#/topics/{{topic.id}}">{{topic.name}}</a>
+        </h3>
+    </div>
+    <div class="panel-body">
+        {{topic.description}}
+    </div>
 </div>
 
 <h2>Lisää oma aihealueesi</h2>
 
-<form>
+<form name="newTopicForm">
   <div class="form-group">
     <label>Nimi</label>
-    <input type="text" class="form-control" ng-model="newTopic.name">
+    <input type="text" class="form-control" ng-model="newTopic.name" required ng-minlength="1">
   </div>
 
   <div class="form-group">
     <label>Kuvaus</label>
-    <textarea class="form-control" ng-model="newTopic.description"></textarea>
+    <textarea class="form-control" ng-model="newTopic.description" required ng-minlength="1"></textarea>
   </div>
-  <button class="btn btn-success" ng-click="addTopic()">Lisää viesti</button>
+  <button ng-disabled="newTopicForm.$invalid" class="btn btn-success" ng-click="addTopic()">Lisää aihealue</button>
 </form>
