--- a/public/app/views/messages/show.html
+++ b/public/app/views/messages/show.html
@@ -1,35 +1,33 @@
 <div class="page-header">
-  <h1>Viestin otsikko tähän</h1>
+  <h1>{{message.title}}</h1>
 </div>
 
 <p>
-  Viestin sisältö tähän
+  {{message.content}}
 </p>
 
-<h2>1 vastaus</h3>
+<h2><ng-pluralize count="message.Replies.length" when="{'0': '0 vastausta', '1': '1 vastaus', 'other': '{} vastausta'}"></ng-pluralize></h2>
 
-<ul class="media-list">
-  <li class="media">
-    <div class="media-body">
-      <h4 class="media-heading">Käyttäjätunnus tähän</h4>
-
-      <p>
-        Vastauksen sisältö tähän
-      </p>
-
-      <p class="text-muted">
-        1.1.2015 12:00
-      </p>
-    </div>
-  </li>
+<ul ng-repeat="reply in message.Replies" class="media-list">
+    <li class="media">
+        <div class="media-body">
+            <h4 class="media-heading">USERNAME</h4>
+            
+            <p>{{reply.content}}</p>
+            
+            <p class="text-muted">
+                {{reply.createdAt | date:'dd.MM.yyyy @ h:mma'}}
+            </p>
+        </div>
+    </li>
 </ul>
 
 <h2>Lisää oma vastauksesi</h2>
 
-<form>
+<form name="replyForm">
   <div class="form-group">
     <label>Vastaus</label>
-    <textarea class="form-control"></textarea>
+    <textarea ng-model="reply.content" class="form-control" required ng-minlength="1"></textarea>
   </div>
-  <button class="btn btn-success">Lisää vastaus</button>
+  <button ng-click="addReply()" ng-disabled="replyForm.$invalid" class="btn btn-success">Lisää vastaus</button>
 </form>
