--- a/public/app/views/users/register.html
+++ b/public/app/views/users/register.html
@@ -1,22 +1,26 @@
 <div class="page-header">
-  <h1>Rekisteröidy</h1>
+    <h1>Rekisteröidy</h1>
 </div>
 
-<form>
-  <div class="form-group">
-    <label>Käyttäjätunnus</label>
-    <input type="text" class="form-control">
-  </div>
+<form name="registerForm">
+    <div class="form-group">
+        <label>Käyttäjätunnus</label>
+        <input name="username" ng-model="username" type="text" class="form-control" required ng-minlength="1">
+    </div>
 
-  <div class="form-group">
-    <label>Salasana</label>
-    <input type="text" class="form-control">
-  </div>
+    <div class="form-group">
+        <label>Salasana</label>
+        <input name="password" ng-model="password" type="password" class="form-control" required ng-minlength="1">
+    </div>
 
-  <div class="form-group">
-    <label>Salasana uudelleen</label>
-    <input type="text" class="form-control">
-  </div>
+    <div class="form-group">
+        <label>Salasana uudelleen</label>
+        <input name="confirm_password" ng-model="confirm_password" type="password" class="form-control" required >
+    </div>
 
-  <button class="btn btn-success">Rekisteröidy</button>
+    <div ng-show="errorMessage" class="alert alert-danger">
+        {{errorMessage}}
+    </div>
+
+    <button ng-click="register()" ng-disabled="registerForm.$invalid || password !== confirm_password" class="btn btn-success">Rekisteröidy</button>
 </form>
